# eslib

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/esc/: fenwick_tree.hpp  math.hpp  phys.hpp
include/esf/: boundary_cond.hpp  element.hpp  field.hpp  forward.hpp  function.hpp  geometry.hpp  index.hpp  io.hpp  lagrange_dof_numbering.cdr  math.hpp  matrix_based.hpp  nonlinear_system.hpp  solution_view.hpp  system.hpp  tags.hpp  type_traits.hpp  types.hpp  var.hpp  var_base.hpp  var_list.hpp
include/esf/boundary_cond/: boundary_cond.hpp  boundary_cond_base1.hpp  boundary_cond_base2.hpp  uniform_boundary_cond.hpp
include/esf/dof/: dof_index.hpp  dof_mapper.hpp  dof_mapper1.hpp  dof_mapper2.hpp  dof_mapper_base.hpp  dof_mapper_util.hpp  function.hpp  layered_dof_mapper.hpp  mesh_element_vars_map.hpp  mesh_vars_map.hpp  tools.hpp
include/esf/element/: element_base.hpp  lagrange.hpp  linear_element.hpp  misc_elements.hpp  raviart_thomas.hpp  triangular_element.hpp
include/esf/function/: gradients.hpp  jacobian.hpp  load_vector.hpp  mass_matrix.hpp  matrix.hpp  quadr_point.hpp  ref_map.hpp  stiffness_matrix.hpp
include/esf/geometry/: Boundary.h  algorithm.hpp  compare.hpp  function.hpp  geometry.hpp  linear_grid.hpp  linestring.hpp  point1.hpp  (+6 more)
include/esk/: fenwick_tree.hpp
include/esl/: dense.hpp  io.hpp  sparse.hpp
include/esu/: algorithm.hpp  array.hpp  bitwise.hpp  enum_class_index.hpp  error.hpp  es_util.natvis  exception.hpp  function.cpp  function.hpp  iterator.hpp  numeric.hpp  phys.hpp  string.hpp  thread.hpp  time.hpp  timer.hpp  tuple.hpp  type_traits.hpp
pretty-printer/eslib/: __init__.py  printer.py
test/esl/: base.hpp  binary_expr.hpp  block_view.hpp  check_elements.hpp  esl_test.cpp  matrix_constructor.hpp  non_trivial.hpp  type_string.hpp  type_traits.hpp
(+334 files in other folders)
